--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <a href="https://www.netoptik.ru/sunglasses/sunglasses-man.html?utm_source=direct&utm_medium=cpc&utm_campaign=netoptic_relevant&utm_content={ad_id}/{keyword}">https://www.netoptik.ru/sunglasses/sunglasses-man.html?utm_source=direct&utm_medium=cpc&utm_campaign=netoptic_relevant&utm_content={ad_id}/{keyword}</a>
